<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.manenkov.demo</groupId>
    <artifactId>maven-jlink</artifactId>
    <version>1.0-SNAPSHOT</version>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.9</source>
                    <target>1.9</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.4.0</version>
                <executions>
                    <execution>
                        <id>installer</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${java.home}/bin/jlink</executable>
                            <arguments>
                                <argument>--module-path</argument>
                                <argument>${java.home}${file.separator}jmods;${project.build.directory}${file.separator}${artifactId}-${version}.jar</argument>
                                <argument>--add-modules</argument>
                                <argument>com.manenkov.demo.jlink</argument>
                                <argument>--launcher</argument>
                                <argument>launch=com.manenkov.demo.jlink/com.manenkov.demo.jlink.Application</argument>
                                <argument>--output</argument>
                                <argument>${build.directory}${file.separator}installer</argument>
                                <argument>--compress</argument>
                                <argument>2</argument>
                                <argument>--no-header-files</argument>
                                <argument>--no-man-pages</argument>
                                <argument>--strip-debug</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>